MFS r286340 (bapt):   Fix segfault in pw(8) when modifying the UID of   a user.

PR:		202111
Approved by:	re (delphij)
Sponsored by:	The FreeBSD Foundation